src/objects/FieloCMS__Navigation__c.object
<CustomObject>
    <description>A Navigation allows you to access the created Pages and Content from the Site.</description>
    <fields>
        <fullName>FieloCMS__CustomURL__c</fullName>
        <label>Custom URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Page__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Page</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FieloCMS__Page__c.FieloCMS__Site__c</field>
                <operation>equals</operation>
                <valueField>$Source.FieloCMS__Site__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloCMS__Page__c</referenceTo>
        <relationshipLabel>Navigations</relationshipLabel>
        <relationshipName>Navigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FieloCMS__Navigation__c.FieloCMS__Site__c</field>
                <operation>equals</operation>
                <valueField>$Source.FieloCMS__Site__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloCMS__Navigation__c</referenceTo>
        <relationshipLabel>Navigations</relationshipLabel>
        <relationshipName>Navigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Site</label>
        <referenceTo>FieloCMS__Site__c</referenceTo>
        <relationshipLabel>Navigations</relationshipLabel>
        <relationshipName>Navigations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Slug__c</fullName>
        <label>Slug</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Url__c</fullName>
        <description>Build the url using the CustomUrl or the Page&apos;s lookup field</description>
        <formula>IF( !ISBLANK(FieloCMS__CustomURL__c) &amp;&amp; !ISNULL(FieloCMS__CustomURL__c) , FieloCMS__CustomURL__c , IF(!ISBLANK($Setup.FieloCMS__OrganizationSettings__c.FieloCMS__PackagePrefix__c) &amp;&amp; !ISNULL($Setup.FieloCMS__OrganizationSettings__c.FieloCMS__PackagePrefix__c), &apos;/&apos; + $Setup.FieloCMS__OrganizationSettings__c.FieloCMS__PackagePrefix__c + &apos;__Page?navId=&apos; + Id , &apos;/Page?navId=&apos; + Id))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It allows filtering Navigation elements depending on Member Segments.</description>
        <inlineHelpText>Choose a Segment to apply to a Navigation element.</inlineHelpText>
        <label>Segment</label>
        <referenceTo>FieloPLT__Segment__c</referenceTo>
        <relationshipLabel>Navigations</relationshipLabel>
        <relationshipName>Navigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Navigation</label>
    <nameField>
        <label>Navigation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Navigations</pluralLabel>
    <recordTypes>
        <fullName>FieloCMS__CustomLink</fullName>
        <active>true</active>
        <description>Navigation items which enable custom URL to be entered.</description>
        <label>Custom Link</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCMS__Item</fullName>
        <active>true</active>
        <description>Navigation items which point to pages created by Fielo CMS.</description>
        <label>Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCMS__List</fullName>
        <active>true</active>
        <description>It groups Navigation in Sites.</description>
        <label>List</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloCMS__CustomLinkRequired</fullName>
        <active>true</active>
        <description>The Custom URL is required for a custom link Navigation.</description>
        <errorConditionFormula>ISBLANK(FieloCMS__CustomURL__c)&amp;&amp;  RecordType.DeveloperName  = &apos;CustomLink&apos;</errorConditionFormula>
        <errorDisplayField>FieloCMS__CustomURL__c</errorDisplayField>
        <errorMessage>The Custom URL is required for a custom link Navigation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCMS__NameRequired</fullName>
        <active>true</active>
        <description>Navigation name is required.</description>
        <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Navigation name is required.</errorMessage>
    </validationRules>
</CustomObject>